# cf_benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  full_test_output.txt  main.py  pyproject.toml  retest2_output.txt  retest3_output.txt  retest_output.txt  timing_benchmark_output.txt  timing_benchmark_v2.txt
configs/cf_method/: dice.yaml  gs.yaml  lore.yaml  moc.yaml  nice.yaml
configs/dataset/: adult.yaml  compas.yaml  credit_default.yaml  diabetes.yaml  german.yaml  heloc.yaml  lending.yaml
configs/experiment/: robustness_experiment.yaml
configs/model/: pytorch_classifier.yaml
results/dice/logs/: adult_dice_42.jsonl  compas_dice_42.jsonl  credit_default_dice_42.jsonl  diabetes_dice_42.jsonl  german_dice_42.jsonl  heloc_dice_42.jsonl  lending_dice_42.jsonl
results/dice/raw/: adult_pareto_cfs.csv  adult_records.csv  compas_pareto_cfs.csv  compas_records.csv  diabetes_pareto_cfs.csv  diabetes_records.csv  german_pareto_cfs.csv  german_records.csv  heloc_pareto_cfs.csv  heloc_records.csv  lending_pareto_cfs.csv  lending_records.csv
results/dice/tables/: adult_by_dataset.csv  adult_by_sigma.csv  adult_pareto_only.csv  (+45 more)
results/tables/: parallel_run_results.csv  pool_convergence.csv
scripts/: aws_setup.sh  pool_convergence.py  run_parallel.py  selection_analysis.py  timing_benchmark.py
src/cf_methods/: __init__.py  base_cf_method.py  dice_method.py  gs_method.py  lore_method.py  method_factory.py  moc_method.py  nice_method.py  registry.py
src/data/: data_module.py  registry.py
src/evaluation/: aggregator.py  experiment.py  plotting.py  selectors.py  stability_curve.py
src/models/: base_model.py  pytorch_classifier.py  trainer.py
src/orchestration/: prefect_flow.py  tasks.py
src/perturbations/: base_perturbation.py  gaussian.py  uniform.py
src/pool/: deduplicator.py  pool_builder.py
src/robustness/: geometric.py  intervention.py  matcher.py  score.py
src/utils/: config_loader.py  constants.py  logger.py  seed.py
(+412 files in other folders)
