[project]
name = "cf-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "arff>=0.9",
    "deap>=1.4.4",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "prefect>=3.6.25",
    "pymoo>=0.6.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "raiutils>=0.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = [".", "/Users/volk/Documents/bau24-25/thesis/repos/DiCE-X"]
